--- a/style.css
+++ b/style.css
@@ -42,11 +42,11 @@ body {
     border-bottom-left-radius: 30px;
     border-bottom-right-radius: 30px;
 }
-.lower-card h2,#exp-text{
+.lower-card h1,#exp-text{
     text-align: center;
     padding-top: 20px;
 }
-h2 {
+h1 {
     color: hsl(223, 47%, 23%);
 }
 
@@ -55,12 +55,14 @@ h2 {
     margin-top: 40px;
     margin-left: 80px;
 }
-#change {
+.btn-1 {
     margin-left: 55px;
-    padding-top: 10px;
+    border: none;
+    background-color: #fff;
+    
 }
-#change:hover{
-    color: hsla(245, 73%, 51%, 0.801);
+.btn-1:hover{
+    color: hsla(245, 74%, 51%, 0.801);
     cursor: pointer;
 }
 #plan-t {
@@ -73,9 +75,9 @@ h2 {
 
 .btn {
     display: block;
-    background-color: hsla(245, 73%, 51%, 0.801);
+    background-color: hsla(245, 86%, 36%, 0.801);
     color: #fff;
-    padding: 10px;
+    padding: 15px;
     border-radius: 10px;
     margin-left: 5%;
     margin-right: 5%;
@@ -91,12 +93,11 @@ h2 {
 a {
     text-decoration: none;
     margin-right: 25%;
-    color: hsl(223, 47%, 23%);
+    color: hsl(223, 31%, 60%);
 }
 #x-order {
     margin-top: 30px;
     margin-left: 40%;
-    font-weight: bold;
 }
 p {
     color:hsl(224, 23%, 55%);
