--- a/style.css
+++ b/style.css
@@ -53,6 +53,9 @@ h1 {
     margin-top: 40px;
     margin-left: 80px;
 }
+.price,h2 {
+    margin-left: 5px;
+}
 .btn-1 {
     margin-left: 55px;
     border: none;
@@ -63,12 +66,11 @@ h1 {
     color: hsla(245, 74%, 51%, 0.801);
     cursor: pointer;
 }
-#plan-t {
-    margin-left: 5px;
-}
-#p-txt {
+
+h2 {
     color: hsl(223, 47%, 23%);
     font-weight: bold;
+    font-size: 1rem;
 }
 
 .btn {
